0.9608_01 2022-06-16
  [CHANGE]
  * Improve error messages of compilation.
  * Improve Time::Info document.
  * Improve Changes of spvmdist command.
  * Improve Time doucment.
  * Add Sort class.
  
  [NON BACKWORD COMPATIBLE CHANGES]
  * The following methods are moved from Fn class to Sort class.
    sort_byte
    sort_double
    sort_float
    sort_int
    sort_long
    sort_object
    sort_short
    sort_string

0.9608 2022-06-16
  [CHANGE]
  * Add "--genlib" option to "spvmdist" command.
  * Add "--print-dependent-resources" and "-p" options to "spvmcc" command.
  [BUG FIX]
  * Fix the bug that spvmcc don't set @INC to the value of -I.
  * Fix many bugs of the resource sysmtem of "spvmcc" command.
  [NON BACKWORD COMPATIBLE CHANGES]
  * remove "dynamic-lib" option form "spvmcc" command.
  * remove "static-lib" option form "spvmcc" command.
  
0.9607 2022-06-15
  [CHANGE]
  * Add the following methods to Fn class
    static method memset_byte : void ($dest : byte[], $dest_offset : int, $value : byte, $length : int)
    static method memset_double : void ($dest : double[], $dest_offset : int, $value : double, $length : int)
    static method memset_float : void ($dest : float[], $dest_offset : int, $value : float, $length : int)
    static method memset_int : void ($dest : int[], $dest_offset : int, $value : int, $length : int)
    static method memset_long : void ($dest : long[], $dest_offset : int, $value : long, $length : int)
    static method memset_short : void ($dest : short[], $dest_offset : int, $value : short, $length : int)
    static method memset_object : void ($dest : object[], $dest_offset : int, $value : object, $length : int)
    static method memcpy_object : void ($dest : object[], $dest_offset : int, $source : object[], $source_offset : int, $length : int)
    static method memmove_object : void ($dest : object[], $dest_offset : int, $source : object[], $source_offset : int, $length : int)
  * Add class_id operator.