@@ -82,20 +82,6 @@ class TestCase::Lib::Sort {
       }
     }
 
-    # Exception - Array must be not undef
-    {
-      my $nums = [(byte)2, 3, 1];
-      
-      eval {
-        Sort->sort_byte(undef, 0, scalar @$nums, method : int ($a : byte, $b : byte) {
-          return $a <=> $b;
-        });
-      };
-      unless ($@) {
-        return 0;
-      }
-    }
-    
     # Exception - Offset must be more than or equals to 0
     {
       my $nums = [(byte)5, 2, 3, 1, -10];
